updates to css and html

--- a/pacMen.html
+++ b/pacMen.html
@@ -4,10 +4,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>PacMan Game</title>
   </head>
   <body>
     <div class="container">
+      <img class="logo" src="./images/pacMan-logo.png" alt="" />
       <div id="game">
         <button type="button" class="btn btn-light" onclick="makeOne()">
           Add PacMan
@@ -17,7 +18,8 @@
         </button>
       </div>
     </div>
-
-    <script src="./pacMen.js"></script>
+    <div>
+      <script src="./pacMen.js"></script>
+    </div>
   </body>
 </html>
