--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <button type="button" class="btn btn-light" onclick="update()">
           Start Game
         </button>
+        <button type="button" class="btn btn-light" onClick="window.location.reload();">
+          Restart
+        </button>
       </div>
     </div>
     <div>
